# demo-hello-world

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig
components/Receiver/: CMakeLists.txt  readme.md
components/Receiver/Communication/inc/: usb_serial_bridge.h
components/Receiver/Communication/src/: usb_device_receiver.c  usb_serial_bridge.cpp
components/Receiver/other/inc/: task.h
components/Receiver/other/src/: led_status_manager.c  task.c
components/Receiver/src/: task.c
components/Receiver/tcp_hb/inc/: tcp_client_hb.h
components/Receiver/tcp_server/inc/: tcp_common_protocol.h  tcp_server.h
components/Receiver/tcp_server/src/: tcp_server.c
components/Receiver/tcp_telemetry/inc/: pwm_controller.h  tcp_client_telemetry.h
components/Receiver/tcp_telemetry/src/: pwm_controller.c  tcp_client_telemetry.c
components/elrs/: CMakeLists.txt  DIY.json
components/elrs/CRC/: crc.cpp
components/elrs/SX1280Driver/: SX1280.cpp  SX1280.h  SX1280_Regs.h  SX1280_hal.h
components/elrs/SX12xxDriverCommon/: SX12xxDriverCommon.h
components/elrs/Telemetry/: telemetry.cpp  telemetry.h
components/elrs/TelemetryProtocol/: telemetry_protocol.h
components/elrs/include/: LowPassFilter.h  WebContent.h  common.h  deferred.h  dynpower.h  hardware.h  helpers.h  native.h  rxtx_common.h  rxtx_intf.h  targets.h
components/elrs/lib/ADC/: devADC.cpp  devADC.h
components/elrs/lib/AnalogVbat/: devAnalogVbat.cpp  devAnalogVbat.h
components/elrs/lib/BLE/: devBLE.cpp  devBLE.h
components/elrs/lib/BUTTON/: button.h  devButton.cpp  devButton.h
components/elrs/lib/Backpack/: devBackpack.cpp  devBackpack.h
components/elrs/lib/Baro/: baro_base.cpp  baro_base.h  baro_bmp085.cpp  baro_bmp085.h  baro_bmp085_regs.h  baro_bmp280.cpp  baro_bmp280.h  baro_bmp280_regs.h  baro_spl06.cpp  baro_spl06.h  baro_spl06_regs.h  devBaro.cpp  devBaro.h
components/elrs/lib/CONFIG/: config.cpp  config.h  config_legacy.h
components/elrs/lib/CRC/: crc.h
components/elrs/lib/CRSF2MSP/: crsf2msp.cpp  crsf2msp.h  crsfmsp_common.h  msp2crsf.cpp  msp2crsf.h
components/elrs/lib/CrsfProtocol/: CRSFConnector.cpp  CRSFConnector.h  CRSFEndpoint.cpp  CRSFEndpoint.h  CRSFParameters.h  CRSFParser.cpp  CRSFParser.h  CRSFRouter.cpp  CRSFRouter.h  crsf_protocol.h
components/elrs/lib/DEVICE/: device.cpp  device.h
components/elrs/lib/FEC/: FEC.cpp  FEC.h  hamming.cpp  hamming.h
components/elrs/lib/FHSS/: FHSS.cpp  FHSS.h  random.cpp  random.h
components/elrs/lib/FIFO/: FIFO.h
components/elrs/lib/GSENSOR/: devGsensor.cpp  devGsensor.h  gsensor.cpp  gsensor.h  stk8baxx.cpp  stk8baxx.h
components/elrs/lib/HWTIMER/: ESP32_hwTimer.cpp  ESP8266_hwTimer.cpp  hwTimer.h
components/elrs/lib/Handset/: AutoDetect.cpp  AutoDetect.h  CRSFHandset.cpp  CRSFHandset.h  PPMHandset.cpp  PPMHandset.h  devHandset.cpp  devHandset.h  handset.h
components/elrs/lib/LBT/: LBT.cpp  LBT.h
components/elrs/lib/LED/: devLED.cpp  devLED.h  devRGB.cpp  esp32rgb.cpp  esp32rgb.h
components/elrs/lib/LQCALC/: LQCALC.h
components/elrs/lib/LR1121Driver/: LR1121.cpp  LR1121.h  LR1121Driver.h  LR1121_Regs.h  LR1121_hal.cpp  LR1121_hal.h  lr1121_transceiver_F30104.h
components/elrs/lib/MAVLink/: MAVLink.cpp  MAVLink.h  ardupilot_custom_telemetry.cpp  ardupilot_custom_telemetry.h  ardupilot_protocol.h
components/elrs/lib/MSP/: msp.cpp  msp.h  msptypes.h
components/elrs/lib/MSPVTX/: devMSPVTX.cpp  devMSPVTX.h  freqTable.cpp  freqTable.h
components/elrs/lib/MeanAccumulator/: MeanAccumulator.h  StdevAccumulator.h
components/elrs/lib/OPTIONS/: EspFlashStream.cpp  EspFlashStream.h  hardware.cpp  options.cpp  options.h
components/elrs/lib/OTA/: OTA.cpp  OTA.h
components/elrs/lib/PFD/: PFD.h
components/elrs/lib/POWERMGNT/: POWERMGNT.cpp  POWERMGNT.h
components/elrs/lib/POWER_DETECT/: devPDET.cpp  devPDET.h
components/elrs/lib/PWM/: PWM.cpp  PWM.h  PWM_ESP32.cpp  PWM_ESP8266.cpp  waveform_8266.cpp  waveform_8266.h
components/elrs/lib/RFAMP/: RFAMP_hal.cpp  RFAMP_hal.h
components/elrs/lib/SCREEN/: devScreen.cpp  devScreen.h  display.cpp  display.h  fsm.cpp  fsm.h  menu.cpp  menu.h
components/elrs/lib/SPIEx/: SPIEx.cpp  SPIEx.h
components/elrs/lib/SX127xDriver/: SX127x.cpp  SX127x.h  SX127xDriver.h  SX127xHal.cpp  SX127xHal.h  SX127xRegs.h  license.txt
components/elrs/lib/SX1280Driver/: SX1280.cpp  SX1280.h  SX1280Driver.h  SX1280_Regs.h  SX1280_hal.cpp
components/elrs/lib/SX12xxDriverCommon/: SX12xxDriverCommon.h
components/elrs/lib/SerialUpdate/: devSerialUpdate.cpp  devSerialUpdate.h  slip.cpp  slip.h  soc_support.h  stub_commands.cpp  stub_commands.h  stub_flasher.cpp  stub_flasher.h  stub_write_flash.cpp  stub_write_flash.h
components/elrs/lib/ServoOutput/: DShotRMT.cpp  DShotRMT.h  devServoOutput.cpp  devServoOutput.h
components/elrs/lib/StubbornReceiver/: stubborn_receiver.cpp  (+1 more)
components/elrs/src/: DummyHandset.cpp  DummyHandset.h  common.cpp  dynpower.cpp  rx_main.cpp  rxtx_common.cpp  test_main.cpp  tx_main.cpp
components/elrs/tx-crsf/: TXModuleEndpoint.cpp  TXModuleParameters.cpp  TXOTAConnector.cpp  TXOTAConnector.h  devTXLUA.cpp  devTXLUA.h
main/: CMakeLists.txt  components_init.c  idf_component.yml  main.c  main.cpp  task_init.c
main/UI/: ui_binding.c  ui_calibration.c  ui_common.c  ui_image_transfer.c  ui_main.c  ui_numeric_keypad.c  ui_serial_display.c  ui_settings.c  ui_start_animation.c  ui_sync.c  ui_telemetry.c  ui_wifi_settings.c
main/UI/inc/: status_bar_manager.h  ui.h  ui_binding.h  ui_calibration.h  ui_image_transfer.h  ui_telemetry.h
main/app/: ap_manager.c  auto_pairing.c  background_manager.c  calibration_manager.c  lsm6ds_control.c  lvgl_main.c  p2p_udp_image_transfer.c  serial_display.c  settings_manager.c  status_bar_manager.c
main/app/Telemetry/: README.md  TCP_SERVER_HB_README.md
main/app/game/: game.h  game_brickbreaker.c  game_main.c  game_snake.c  game_tetris.c
main/app/image_transfer/: CMakeLists.txt
main/app/inc/: ap_manager.h  auto_pairing.h  lsm6ds_control.h  settings_manager.h  ui_event_queue.h
main/app/src/: ui_event_queue.c
main/inc/: ui_sync.h
(+155 files in other folders)
